--- a/src/app/ui/figures/character/summon/summon.scss
+++ b/src/app/ui/figures/character/summon/summon.scss
@@ -38,7 +38,7 @@
   text-shadow: var(--ghs-outline);
   width: 100%;
   margin-right: calc(var(--ghs-unit) * 1 * var(--ghs-text-factor));
-  margin-bottom: calc(var(--ghs-unit) * 1 * var(--ghs-text-factor));
+  margin-bottom: calc(var(--ghs-unit) * 0.25 * var(--ghs-text-factor));
 
   .standee {
     display: flex;
