--- a/src/app/ui/figures/monster/entity/entity.scss
+++ b/src/app/ui/figures/monster/entity/entity.scss
@@ -37,7 +37,7 @@
   text-shadow: var(--ghs-outline);
   width: 100%;
   margin-right: calc(var(--ghs-unit) * 1 * var(--ghs-text-factor));
-  margin-top: calc(var(--ghs-unit) * 1 * var(--ghs-text-factor));
+  margin-top: calc(var(--ghs-unit) * 0.25 * var(--ghs-text-factor));
 
   .standee {
     display: flex;
